Utilities/Mealie/mealie-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: mealie
  name: mealie
  namespace: mealie
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mealie
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.35.0 (9532ceef3)
      labels:
        app.kubernetes.io/name: mealie
    spec:
      containers:
        - env:
            - name: ALLOW_SIGNUP
              value: "false"
            - name: BASE_URL
              value: https://mealie.local.flyvmed.dk
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value: Europe/Copenhagen
          image: ghcr.io/mealie-recipes/mealie:v2.7.1
          name: mealie
          namespace: mealie
          ports:
            - name: http
              containerPort: 9000
              protocol: TCP
          resources:
            limits:
              memory: "1048576e3"
          volumeMounts:
            - mountPath: /app/data
              name: mealie-data
      restartPolicy: Always
      volumes:
        - name: mealie-data
          persistentVolumeClaim:
            claimName: mealie-data
