Utilities/Mealie/mealie-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie
  namespace: mealie
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: mealie
spec:
  ports:
    - name: http
      port: 9925
      targetPort: http
      protocol: TCP
  selector:
    io.kompose.service: mealie
