Utilities/Mealie/mealie.ingress-traefik.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mealie-ingress
  namespace: mealie
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`mealie.local.flyvmed.dk`) && PathPrefix(`/`)
    kind: Rule
    services:
    - kind: Service
      name: mealie
      namespace: mealie
      port: 3000
  tls:
    certResolver: letsencrypt
